# docker-devnull-vscode-python

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
